# omnidirectional_controllers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  omnidirectional_plugin.xml  package.xml
.github/: CODEOWNERS
.github/workflows/: humble-source-build.yaml
doc/: kinematics_and_odometry.md
include/omnidirectional_controllers/: kinematics.hpp  odometry.hpp  omnidirectional_controller.hpp  types.hpp
src/: kinematics.cpp  odometry.cpp  omnidirectional_controller.cpp
test/: test_kinematics.cpp  test_odometry.cpp
